fixed overlap error by changing font size

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -175,8 +175,11 @@ h1 {
         float: left;
     }
     div#topnav.nav-items.responsive a{
+        padding-right: 20px;
         display: block;
         float: none;
+        font-size: 125%;
+
     }
 
     /* div#topnav.nav-items.responsive a.brand-logo{
